@@ -172,6 +172,9 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     See the shorewall-secmarks and shorewall6-secmarks manpages for
     details.
 
+    As part of this change, the tcrules file now accepts chain
+    designators 'I' and 'CI' for marking packets in the input chain.
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
